@@ -70,7 +70,10 @@ public final class OwnCacheKeyMultiReader extends MultiReader {
           }
         }
       }
-      IOUtils.reThrow(th);
+      
+      if (th != null) {
+        throw IOUtils.rethrowAlways(th);
+      }
     }
   }
 
